added style to abous us

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,12 +12,14 @@
         <nav>
             <ul>
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
-                <li><a class="nav-links" href="aboutus.html">About Us</a></li>
+                <li><a class="nav-links active" href="aboutus.html">About Us</a></li>
                 <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
                 <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
               </ul>
         </nav>
         <h1 class="about-us">About Us</h1>
+        <div class="circle"></div>
+        <div class="line"></div>
         <div class="block2"> </div>
         <div class="block"> </div>
     </header>
@@ -36,13 +38,13 @@
         </div>
     </main>
     </body>
+    
 
     <footer> 
-        <section class="doc-links">
-            <h1> Class Documents </h1>
-            <p> <a href="https://docs.google.com/document/d/1dHH26H-0xLW40eapRAgPV_ryzTQf5ZO3TOdL3QGb_N0/edit?usp=sharing">Project Plan</a> </p>
-            <p> <a href="https://drive.google.com/file/d/1zU474tYxmlTBHQbaAgeji107JcmOnXIc/view?usp=sharing">Wireframe</a> </p>
-            <p> <a href="https://docs.google.com/document/d/1NLA4rusL7y6Si41625KrCYIrA1qW2T8G0_9ESlaIVZw/edit?usp=sharing">Design Documentation</a> </p>
-            <p> <a href="https://docs.google.com/document/d/1Oa82XQXZ_4rZ-ELB6vefks_C0VINcE8VczkrON-qd9I/edit?usp=sharing">Works Cited</a> </p>
+     <section class="doc-links"> <h1> Class Documents </h1>
+        <p> <a href="https://docs.google.com/document/d/1dHH26H-0xLW40eapRAgPV_ryzTQf5ZO3TOdL3QGb_N0/edit?usp=sharing">Project Plan</a> </p>
+        <p> <a href="https://drive.google.com/file/d/1zU474tYxmlTBHQbaAgeji107JcmOnXIc/view?usp=sharing">Wireframe</a> </p>
+        <p> <a href="https://docs.google.com/document/d/1NLA4rusL7y6Si41625KrCYIrA1qW2T8G0_9ESlaIVZw/edit?usp=sharing">Design Documentation</a> </p>
+        <p> <a href="https://docs.google.com/document/d/1Oa82XQXZ_4rZ-ELB6vefks_C0VINcE8VczkrON-qd9I/edit?usp=sharing">Works Cited</a> </p> 
         </section>
     </footer>
