--- a/chinatown.html
+++ b/chinatown.html
@@ -14,7 +14,7 @@
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
                 <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
-                <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
+                <li><a class="nav-links restaurant-link active" href="chinatown.html">Asian Garden</a></li>
               </ul>
         </nav>
         <div class="name">
