--- a/eastboston.html
+++ b/eastboston.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
-                <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
+                <li><a class="nav-links restaurant-link active" href="eastboston.html">El Penol</a></li>
                 <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
               </ul>
         </nav>
@@ -42,7 +42,10 @@
             <h2>They are known for a few reasons; food quality, taste, “clean family restaurant,” and exceptional service. They’ve been running this restaurant for 22 years. </h2>  
             <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the “family.” </p>
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
-            <img class="inside1" src="assets/IMG_1560.png">
+            <figure>
+                <img class="inside1" src="assets/IMG_1560.png">
+                <figcaption class="inside-caption"> inside of el penol </figcaption>
+            </figure>
             <p> The first thing you will notice is the authenticity of the place with latin music being played, greeted like you’re <span>family</span>, and the smell of <span>really good food.</span>  </p>
         </div> 
         <div class="profile">
