--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
         <ul>
-            <li><a class="nav-links centering-com" href="index.html">Centering Communities During COVID</a></li>
+            <li><a class="nav-links centering-com active" href="index.html">Centering Communities During COVID</a></li>
             <li><a class="nav-links" href="aboutus.html">About Us</a></li>
             <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
             <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
@@ -19,7 +19,7 @@
   </nav>
         <div class="container">
             <h1 class="front-page-header"> The <span class="header-span">Impact of COVID19</span> on Boston Minority Businesses </h1>
-            <img class="header-image" src="assets/adam-niescioruk-Z9arfr0f248-unsplash.jpg" alt="graffiti of mask with word 'covid-19'>  
+            <img class="header-image" src="assets/adam-niescioruk-Z9arfr0f248-unsplash.jpg" alt="graffiti of mask with word covid-19">  
             <div class="foo"></div>
         </div>
     </header>  
