--- a/aboutus.html
+++ b/aboutus.html
@@ -41,7 +41,8 @@
     
 
     <footer> 
-     <section class="doc-links"> <h1> Class Documents </h1>
+     <section class="doc-links"> 
+         <h1> Class Documents </h1>
         <p> <a href="https://docs.google.com/document/d/1dHH26H-0xLW40eapRAgPV_ryzTQf5ZO3TOdL3QGb_N0/edit?usp=sharing">Project Plan</a> </p>
         <p> <a href="https://drive.google.com/file/d/1zU474tYxmlTBHQbaAgeji107JcmOnXIc/view?usp=sharing">Wireframe</a> </p>
         <p> <a href="https://docs.google.com/document/d/1NLA4rusL7y6Si41625KrCYIrA1qW2T8G0_9ESlaIVZw/edit?usp=sharing">Design Documentation</a> </p>
