changes to styling and html

--- a/aboutus.html
+++ b/aboutus.html
@@ -36,16 +36,21 @@
                 <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home.  </p>
             </section>
         </div>
+        <section>
+            <h2>Project Plan</h2>
+            <h2>Wireframe</h2>
+            <h2>UX Report</h2>
+            <h2>Design Documentation</h2>
+        </section>
     </main>
     </body>
-    
 
-    <footer> 
-     <section class="doc-links"> 
-         <h1> Class Documents </h1>
-        <p> <a href="https://docs.google.com/document/d/1dHH26H-0xLW40eapRAgPV_ryzTQf5ZO3TOdL3QGb_N0/edit?usp=sharing">Project Plan</a> </p>
-        <p> <a href="https://drive.google.com/file/d/1zU474tYxmlTBHQbaAgeji107JcmOnXIc/view?usp=sharing">Wireframe</a> </p>
-        <p> <a href="https://docs.google.com/document/d/1NLA4rusL7y6Si41625KrCYIrA1qW2T8G0_9ESlaIVZw/edit?usp=sharing">Design Documentation</a> </p>
-        <p> <a href="https://docs.google.com/document/d/1Oa82XQXZ_4rZ-ELB6vefks_C0VINcE8VczkrON-qd9I/edit?usp=sharing">Works Cited</a> </p> 
+    <footer>
+        <section>
+            <h2>Project Plan</h2>
+            <h2>Wireframe</h2>
+            <h2>UX Report</h2>
+            <h2>Design Documentation</h2>
         </section>
     </footer>
+    
