--- a/chinatown.html
+++ b/chinatown.html
@@ -70,21 +70,21 @@
     </div> 
     <div class="support"> 
      <h3>Here's How You Can Help</h3>
-     <ul>
-         <li>Get your next meal from Asian Garden. Browse their menu and order online or dine-in. </li>
-         <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Support</a> </button>
-             <figure>  
-                 <img class="takeout" src="assets/IMG_3527 2.png" alt="picture of walnut shrimp and stir fry beef with pepper takeout">
-                 <figcaption class="take-out-caption"> Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
-                 <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
-             </figure>
-         <li>Donate to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. </li>
-         <button class="support-AG"> <a class="support-button" href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button>
-         <li>Share this website on your social media. </li>
-         <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> </button>  
-         <li>Learn more about other local minority businesses. Read about El Penol, a Latinx restaurant in East Boston. </li>
-         <button class="support-AG"> <a class="support-button" href="eastboston.html"> El Penol </a> </a> </button> 
-     </ul>
+     <figure>  
+        <img class="takeout" src="assets/IMG_3527 2.png" alt="picture of walnut shrimp and stir fry beef with pepper takeout">
+        <figcaption class="take-out-caption"> Walnut Shrimp and Stir Fry Beef with Peppers</figcaption>
+        <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
+    </figure> 
+        <ul class="rest-support-list">
+            <li class="list-support">Get your next meal from Asian Garden. Browse their menu and order online or dine-in. </li>
+            <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Support</a> </button>
+            <li class="list-support">Donate to the Asian Community Emergency Relief Fund. Funds will be distributed to Asian community members in need. </li>
+            <button class="support-AG"> <a class="support-button" href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a> </button>
+            <li class="list-support">Share this website on your social media. </li>
+            <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> </button>  
+            <li class="list-support">Learn more about other local minority businesses. Read about El Penol, a Latinx restaurant in East Boston. </li>
+            <button class="support-AG"> <a class="support-button" href="eastboston.html"> Read about El Penol </a> </a> </button> 
+        </ul>
     </div>
     <div class="foo-ag blue"> </div>
  </main>
