--- a/eastboston.html
+++ b/eastboston.html
@@ -70,25 +70,25 @@
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
          <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
-         <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png"> “Us Latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” – Johan Medina, El Penol’s manager and grandson of Marina’s. </blockquote>
+         <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png"> “Us Latinos help each other a lot and support one another, we are all here for one goal which is to give our family a better life and strive and stick together to reach that goal.” <br> <cite> -Johan Medina, El Penol’s manager and grandson of Marina’s.</cite> </blockquote>
         </div> 
         <div class="support"> 
          <h3>Here's How You Can Help</h3>
-         <ul>
-            <li>Get your next meal at El Penol in East Boston. </li>
+         <figure>  
+            <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png" alt="picture of the bendjo penol plate">
+            <figcaption class="take-out-caption">The famous Bandejo Penol</figcaption>
+            <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
+        </figure>
+         <ul class="rest-support-list">
+            <li class="list-support">Get your next meal at El Penol in East Boston. </li>
             <button class="support-AG"> <a class="support-button" href="http://www.elpenolrestaurante.com">Support</a> </button> 
-            <figure>  
-                <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png" alt="picture of the bendjo penol plate">
-                <figcaption class="take-out-caption">The famous Bandejo Penol</figcaption>
-                <img class="takeout-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
-            </figure>
-            <li>Donate to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
+            <li class="list-support">Donate to the Hispanic Star Relief Fund. Funds will be distributed to Latinx community members and small businesses around the country in need. Click the button to donate. </li>
             <button class="support-AG"> <a class="support-button" href="https://hispanicstar.org/donate/">Donate</a> </button> 
-            <li>Spread the word. Share this website on your social media. </li>
+            <li class="list-support">Spread the word. Share this website on your social media. </li>
             <button class="support-AG"> <a class="support-button" href="https://www.asiangardenboston.com/">Share</a> </button> 
             <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             <iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&layout=button&size=large&width=77&height=28&appId" width="77" height="28" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
-            <li>Learn more about other local minority businesses. Read about Asian Garden, a Chinese restaurant in Chinatown. </li>
+            <li class="list-support">Learn more about other local minority businesses. Read about Asian Garden, a Chinese restaurant in Chinatown. </li>
             <button class="support-AG"> <a class="support-button" href="chinatown.html"> Learn </a> </a> </button> 
          </ul>
         
