--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <p>Yet, Black people make up <span>24%</span> of the reported COVID-19 cases. Latinx people make up <span>30%</span> of the cases. White people only make up <span>34%</span>. </p>
         </div>
         <div class="overview-part-2">
-            <p> You can see the disparity within each neighborhood. Neighborhoods like Dorchestor, Hyde Park, Revere, and East Boston, predominately Black & Brown neighborhoods experience higher rates of COVID-19. </p>
+            <p> You can see the disparity within each neighborhood. Neighborhoods like Dorchester, Hyde Park, Revere, and East Boston, predominately Black & Brown neighborhoods experience higher rates of COVID-19. </p>
             <div class='tableauPlaceholder' id='viz1618180760552' style='position: relative'> 
                 <noscript><a href='https:&#47;&#47;www.bostonmagazine.com&#47;'>
                     <img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;CO&#47;COVIDCasesinBostonbyZipCodeNeighborhood&#47;Dashboard1&#47;1_rss.png' style='border: none' />
@@ -69,7 +69,7 @@
                 <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local business in the Boston and the greater Boston area and help support their businesses.  </p>
                 <div class="foo3"></div>
                 <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png">
-                    The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> <cite> -Suzanne P. Clark, president of the U.S. Chamber</cite>
+                    The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> -Suzanne P. Clark, president of the U.S. Chamber</>
                 </blockquote>
             </div>
         </div>
