--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@
 
         <div class="cta-section"> 
             <h3> Learn More About the Local Businesses in Boston</h3>
+            <div class="map">
+                <img class="map-image" src="assets/neighborhood map.jpg">  
+            </div>
+            <div class="circle1"></div>
+            <div class="circle2"></div>
             <div class="cta"> 
                 <button class="chinatown-button"> <a class="bottom-cta" href="chinatown.html">Asian Garden in Chinatown</a> </button>
                 <button class="revere-button"> <a class="bottom-cta" href="eastboston.html">El Penol in East Boston</a> </button>
