changes to about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,15 +37,7 @@
                 <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home.  </p>
             </section>
         </div>
-        <section>
-            <h2>Project Plan</h2>
-            <h2>Wireframe</h2>
-            <h2>UX Report</h2>
-            <h2>Design Documentation</h2>
-        </section>
     </main>
-    </body>
-
     <footer>
         <section>
             <h2>Project Plan</h2>
@@ -53,4 +46,5 @@
             <h2>Design Documentation</h2>
         </section>
     </footer>
-    
+    </body>
+</html>
